Fixed spacing in the partner sites breadcrum

--- a/akvo/mediaroot/partner_sites/css/src/style.css
+++ b/akvo/mediaroot/partner_sites/css/src/style.css
@@ -43,7 +43,8 @@ ul#breadcrum li a span {
     height: 23px;
     margin: 0;
     padding: 0;
-    padding-top: 1px;
+    /*padding-top: 1px;*/
+    padding-top: 3px;
     padding-right: 20px;
     padding-left: 12px;
     font-size: 12px;
